--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -17,7 +17,8 @@
 		<div class="section">
 			<p class="sectionTitle1">Chicken</p>
 			<p class="menue">Modern varieties of chicken such as the Cornish Cross, are bred specifically for meat production, with an emphasis placed on the ratio of feed to meat produced by the animal. The most common breeds of chicken consumed in the US are Cornish and White Rock.
-			Chickens raised specifically for food are called broilers. In the United States, broilers are typically butchered at a young age. Modern Cornish Cross hybrids, for example, are butchered as early as 8 weeks for fryers and 12 weeks for roasting birds.</p>
+			Chickens raised specifically for food are called broilers. In the United States, broilers are typically butchered at a young age. Modern Cornish Cross hybrids, for example, are butchered as early as 8 weeks for fryers and 12 weeks for roasting birds.
+			</p>
 		</div>
 	</div>
 
