--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -34,12 +34,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="hidden-lg hidden-md hidden-sm"><a href="#">Chicken</a></li>
+        <li class="hidden-lg hidden-md hidden-sm"><a href="#Chicken-Sec">Chicken</a></li>
         <hr class="separator">
-        <li class="hidden-lg hidden-md hidden-sm"><a href="#">Beef</a></li>
+        <li class="hidden-lg hidden-md hidden-sm"><a href="#Beef-Sec">Beef</a></li>
         <!-- <li role="separator" class="divider"></li> -->
         <hr class="separator">
-        <li class="hidden-lg hidden-md hidden-sm"><a href="#">Sushi</a></li>
+        <li class="hidden-lg hidden-md hidden-sm"><a href="#Sushi-Sec">Sushi</a></li>
       </ul>  
     </div><!-- /.navbar-collapse -->
 
@@ -52,7 +52,7 @@
 
 <div id="main-content" class="container">
   <div class="col-xs-12">
-    <div class="section">
+    <div class="section" id="Chicken-Sec">
       <p class="sectionTitle1">Chicken</p>
       <p class="menue">Modern varieties of chicken such as the Cornish Cross, are bred specifically for meat production, with an emphasis placed on the ratio of feed to meat produced by the animal. The most common breeds of chicken consumed in the US are Cornish and White Rock.
       Chickens raised specifically for food are called broilers. In the United States, broilers are typically butchered at a young age. Modern Cornish Cross hybrids, for example, are butchered as early as 8 weeks for fryers and 12 weeks for roasting birds.
@@ -62,7 +62,7 @@
 
 
   <div  class="col-xs-12">
-    <div class="section">
+    <div class="section" id="Beef-Sec">
       <p class="sectionTitle2">Beef</p>
       <p class="menue">Beef is the culinary name for meat from cattle. Beef can be harvested from bulls, heifers or steers. Its acceptability as a food source varies in different parts of the world. </p>
     </div>
@@ -70,7 +70,7 @@
 
 
   <div  class="col-xs-12">
-    <div class="section">
+    <div class="section" id="Sushi-Sec">
       <p class="sectionTitle3">Sushi</p>
       <p class="menue">Sushi can be prepared with either brown or white rice. It is often prepared with raw seafood, but some common varieties of sushi use cooked ingredients or are vegetarian. Raw fish (or occasionally other meat) sliced and served without rice is called "sashimi".</p>
     </div> 
